@@ -16,9 +16,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.aspectj.weaver.tools.cache.SimpleCacheFactory.path;
 
 @Component
 @RequiredArgsConstructor
@@ -28,50 +25,61 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     private final UserDetailsService userDetailsService;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
 
-        final String authHeader = request.getHeader("Authorization");
+
+        String path = request.getRequestURI();
+
 
         if (path.startsWith("/uploads/")
                 || path.startsWith("/api/upload/")
-                || path.matches("/video/.*/upload/.*")) {
+                || path.startsWith("/api/stream/public/")) {
             filterChain.doFilter(request, response);
             return;
         }
 
+        String token = resolveToken(request);
 
-        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            filterChain.doFilter(request, response);
-            return;
-        }
-
-        String token = authHeader.substring(7);
-        if (!jwtTokenProvider.validateToken(token)) {
+        if (token == null || !jwtTokenProvider.validateToken(token)) {
             filterChain.doFilter(request, response);
             return;
         }
 
         String username = jwtTokenProvider.getUsername(token);
+
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
 
-            // ✅ Extract authorities from token
             String rolesString = jwtTokenProvider.getRoles(token);
-            List<SimpleGrantedAuthority> authorities = Arrays.stream(rolesString.split(","))
-                    .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList());
+            List<SimpleGrantedAuthority> authorities =
+                    Arrays.stream(rolesString.split(","))
+                            .map(SimpleGrantedAuthority::new)
+                            .toList();
 
-            // Option 1: Load user details (optional if you trust JWT fully)
             UserDetails userDetails = userDetailsService.loadUserByUsername(username);
 
             UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(userDetails, null, authorities);
+                    new UsernamePasswordAuthenticationToken(
+                            userDetails,
+                            null,
+                            authorities
+                    );
 
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private String resolveToken(HttpServletRequest request) {
+        String authHeader = request.getHeader("Authorization");
+        if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            return authHeader.substring(7);
+        }
+
+        return request.getParameter("token");
     }
 }
